<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProfileActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:padding="10dp"
            android:rotation="180"
            android:src="@drawable/back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit Profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                app:cardCornerRadius="75dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:visibility="gone"
                        android:src="@drawable/dummy_image"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminateTint="@color/main_color"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UserName"
                style="@style/title_text"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="email"
                style="@style/reg_light_text"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/edt_contact"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/login_button"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="30dp"
                android:inputType="phone"
                android:paddingStart="20dp"
                android:fontFamily="@font/regular"
                android:hint="@string/contact_number"
                android:textColorHint="@color/text_grey_color"/>

            <EditText
                android:id="@+id/edt_age"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/login_button"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:inputType="numberSigned"
                android:layout_marginTop="30dp"
                android:paddingStart="20dp"
                android:fontFamily="@font/regular"
                android:hint="@string/age"
                android:textColorHint="@color/text_grey_color"/>


            <EditText
                android:id="@+id/edt_org"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/login_button"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="30dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:drawableTint="@color/text_grey_color"
                android:drawableEnd="@drawable/org_icon"
                android:fontFamily="@font/regular"
                android:hint="@string/organization_name_if_any"
                android:textColorHint="@color/text_grey_color"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_button"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:background="@drawable/save_button"
                android:text="Save profile"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="300dp"/>
        </LinearLayout>

    </ScrollView>
    <ProgressBar
        android:id="@+id/main_loading_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/main_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />



</androidx.constraintlayout.widget.ConstraintLayout>